<resources>
    <string name="app_name">班圈</string>
    <string name="user_name">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="send_inform_text">请输入通知内容</string>
    <string name="send_inform">发送通知</string>
    <string name="login">登录</string>
    <string name="post_poll">发布投票</string>
    <string name="new_user">新用户</string>
    <string name="add_option">添加选项</string>
    <string name="delete_option">删除选项</string>
    <string name="confirm_password">确认密码</string>
    <string name="register" >注册</string>
    <string name="user_name_error">用户名不合法，3到20位，首字符必须是字母</string>
    <string name="password_error">密码不合法，必须是3到20位的数字</string>
    <string name="confirm_password_error">密码和确认密码不一致</string>
    <string name="onRegistering">正在注册。。。</string>
    <string name="logining">登录中。。。</string>
    <string name="logout">退（%s）出</string>
    <string name="dynamic">动态</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="logout_success">退出登录成功</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="contacts">班级</string>
    <string name="load_contacts_sucess">加载成功</string>
    <string name="load_contacts_failed">加载失败</string>
    <string name="send">发送</string>
    <string name="chat_title">与%s聊天中</string>
    <string name="send_message_success">发送成功</string>
    <string name="send_message_failed">发送失败</string>
    <string name="no_text_message">非文本消息</string>
    <string name="username_exist">用户名已经存在</string>
    <string name="add_class">添加班级</string>
    <string name="add_class_sucess">加入班级成功</string>
    <string name="add_class_failed">加入班级失败</string>
    <string name="sure_add_class">你确定要加入这个班级吗？</string>
    <string name="create_class">创建班级</string>
    <string name="class_name">请输入你的班级名称</string>
    <string name="class_desc">请输入你的班级描述</string>
    <string name="class_count">请输入班级人数,不能超过200人</string>
    <string name="send_photo">上传图片</string>
    <string name="upload_file">上传文件</string>
</resources>
