<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/title_bar" />
    <EditText
        android:id="@id/class_name"
        android:hint="@string/class_name"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_height="50dp" />
    <EditText
        android:id="@id/class_desc"
        android:hint="@string/class_desc"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_height="50dp" />
    <EditText
        android:id="@id/class_count"
        android:hint="@string/class_count"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_height="50dp" />
    <Button
        android:id="@id/create"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:text="@string/create_class"
        />

</LinearLayout>