<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@mipmap/login_bk"
    android:orientation="vertical">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/avatar5"
        />
    <EditText
        android:id="@id/user_name"
        android:hint="@string/user_name"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_height="50dp" />
    <EditText
        android:id="@id/password"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:inputType="numberPassword"
        android:imeOptions="actionDone"
        android:layout_height="50dp" />
    <Button
        android:id="@id/login"
        android:background="@drawable/btn_login_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:text="@string/login"
        />
    <TextView
        android:id="@id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/new_user"
        android:textColor="@color/qq_blue"
        />

</LinearLayout>